--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ input {
     padding: 3px;
     border-color: #7e8686;
     color: #ffffff;
+    font-size: 18px;
 }
 
 #simbolo-moeda {
@@ -61,16 +62,16 @@ input {
     display: inline-block;
     background-color: white;
     margin-top: 50px;
-    padding: 30px;
     border-radius: 50px;
-    width: 250px;
+    width: 400px;
+    padding: 80px;
 }
 
 p {
     background-color: white;
     color: #087F8C;
     font-size: 18px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 
@@ -81,11 +82,19 @@ select {
     font-size: 15px;
 }
 
+#moeda-de {
+    width: 200px
+}
+
+#moeda-para {
+    width: 200px
+}
+ 
 #valor {
     background-color: white;
     border-radius: 10px;
+    width: 200px;
 }
-
 
 button {
     display: block;
@@ -95,6 +104,7 @@ button {
     border: none;
     border-radius: 20px;
     font-size: 15px;
+    width: 200px;
 }
 
 
